--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,13 @@
     <artifactId>fastjson</artifactId>
     <version>1.2.47</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
+<dependency>
+    <groupId>org.xerial</groupId>
+    <artifactId>sqlite-jdbc</artifactId>
+    <version>3.7.2</version>
+</dependency>
+
 		
         <dependency>
             <groupId>org.springframework</groupId>
