--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -42,6 +42,6 @@
 	</servlet-mapping>
 	
     <welcome-file-list>
-    	<welcome-file>m/hello.do</welcome-file>
+    	<welcome-file>c/hello.do</welcome-file>
   	</welcome-file-list>
 </web-app>
